feat: modify pengaduan (remove status workflow)
