# routes/pengaduanRoutes.js
@@ -8,7 +8,6 @@ router.post('/', pengaduanController.create); // Mengirim pengaduan
 
 // Route Admin (Butuh Auth)
 router.get('/', authMiddleware, pengaduanController.getAll); // Melihat semua pengaduan
-router.put('/:id/status', authMiddleware, pengaduanController.updateStatus); // Mengubah status
 router.delete('/:id', authMiddleware, pengaduanController.delete); // Menghapus pengaduan
 
 module.exports = router;
